src/styles/scss/app-visual.scss
@import "base/var";
@import "mixin/elevation";

// 6PIXEL APP CODE
$header: 72px;

.app {
  width: 100%;
  background: white;
}

.app-header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;

  display: flex;
  align-items: center;
  justify-content: space-between;

  width: 100%;
  height: $header;
  padding: 12px 24px;
  background: white;
  box-shadow: 0px 2px 3px rgba(0,0,0,0.4);
  transition: padding .3s ease, height .5s ease;

  &.top-offset {
    padding: 6px 24px;
    height: 24px;
  }

  &__logo {
    flex: 1;
    font-size: 1.3rem;
    font-weight: 300;
    color: black;
  }

  &__links {
    color: black;
  }
}

.app-view {
  max-width: 70vw;
  min-height: calc(100vh - 160px - #{$header} - 24px - #{$header} - 48px);
  margin: calc(24px + #{$header}) auto 48px;
  padding-bottom: 48px;
}

.app-sidebar {
  position: fixed;
  top: $header;
  left: 0;
  bottom: 0;
  z-index: 1;

  width: 240px;
  background: rgba(0,0,0,0.8);
  transform: translateX(-100%);
  transition: transform .3s ease;

  &.is-open {
    transform: translateX(0%);
  }

  // OPEN
  &__open {
    background: $brand-primary;
    color: white;
    max-width: 36px;
    max-height: 36px;
    padding: 6px;
    border-radius: 50%;
    box-shadow: 0px 0px 1px rgba(0,0,0,0.5);
    cursor: pointer;

    position: absolute;
    top: 12px;
    right: -48px;
    z-index: 2;

    transform: rotate(0deg);
    transition: right .3s ease, box-shadow .3s ease, transform .3s ease;

    &:hover {
      box-shadow: 0px 0px 4px rgba(0,0,0,0.5);
    }

    &.is-open {
      right: -18px;
      transform: rotate(45deg);
    }
  }

  // NAV
  &__nav {
    color: white;

    li {
      position: relative;
      cursor: pointer;
      padding: 9px 12px;
      z-index: 1;
      outline: 0;

      &:not(.app-nav__nav) {
        &::after {
          content: '';
          position: absolute;
          top: 0;
          left: 0;
          bottom: 0;
          z-index: -1;
          width: 0%;
          background: $white;
          opacity: .3;
          transition: width .5s ease, background .5s ease;
        }

        &:focus,
        &:active,
        &:hover,
        &.is-active {
          &::after {
            width: 100%;
          }
        }
        &.is-active {
          &::after {
            background: $primary;
          }
        }
      }

      &.app-nav__nav {
        font-size: 10px;
        margin-top: 12px;
        padding-bottom: 6px;
        border-bottom: 1px solid #e5e5e5;
      }
    }
  }
}
.app-nav-inner {
  display: none;
  margin-top: 12px;

  li {
    left: -12px;
    padding-left: 24px;
  }
}

.app-nav {
  & > li {
    position: relative;

    a {
      display: block;
      color: white;
      text-decoration: none;
    }

    &.has-menu {
      &::before {
        content: 'keyboard_arrow_down';
        position: absolute;
        top: 12px;
        right: 12px;
        z-index: 1;
        color: white;
        font-family: $liga-font-family;
        transform: rotate(0deg);
        transition: transform .3s ease-in-out;
      }
    }

    &.is-active {
      &.has-menu {
        &::before {
          transform: rotate(180deg);
        }
      }

      .app-nav-inner {
        display: block;
      }
    }
  }
}

.app-menu-nav {
  display: flex;
  margin: auto;
  width: 70vw;

  > div {
    flex: 1;
  }
}

.app-menu-title {
  margin: 24px 0 56px;
  border-bottom: 1px solid gray;
}

// TABLE DOCUMENTS
.app-table {
  table-layout: fixed;
  width: 100%;
  margin: 12px 0;
  text-align: left;
  border: 1px solid rgba(0,0,0,0.3);

  th,
  td {
    padding: 12px;
    font-size: 12px;
    border: 1px solid rgba(0,0,0,0.3);
  }

  th {
    background: rgba(0,0,0,0.5);
    color: white;
  }
}

// FOOTER
.app-footer {
  padding: 48px;
  background: rgba(0,0,0,1);
  color: white;
  text-align: center;

  p {
    font-size: .75rem;
  }

  .material-icons {
    vertical-align: middle;
  }
}

.spx-logo {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  width: 50px;
  height: 50px;
  margin: 24px;
  background: $primary;
  @include elevation-2;

  &--sm {
    transform: scale(.5);
    margin: 6px;
  }

  &__px {
    position: absolute;
    background: $primary;
    @include elevation-1;

    &:nth-child(1) {
      top: -30%;
      left: -30%;
      width: 30px;
      height: 30px;
    }

    &:nth-child(2) {
      top: 50%;
      left: 70%;
      width: 40px;
      height: 40px;
    }

    &:nth-child(3) {
      top: -3%;
      left: 80%;
      width: 20px;
      height: 20px;
    }

    &:nth-child(4) {
      top: 80%;
      left: -30%;
      width: 30px;
      height: 30px;
    }

    &:nth-child(5) {
      top: -20%;
      left: 15%;
      width: 12px;
      height: 12px;
    }
  }
}

pre {
  background: white !important;
}

